--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Blog - Business Casual - Start Bootstrap Theme</title>
+    <title>Blog - Merakiart</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Merakiart</div>
+    <div class="address-bar">UNIVERSITY OF THE CORDILLERAS, BAGUIO CITY</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
